# xauusd_1500

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.bat
configs/: live.yaml  live_demo_bt.yaml
scripts/: analyze_ledger_regime.py  backtest_demo_executor_live_like.py  backtest_mt5_history.py  brake_sweep.py  demo_executor_mt5.py  export_symbol_info.py  monte_carlo.py  monthly_report.py  run_live.py  sensitivity.py  short_backtest.py  target_sweep.py  walk_forward.py  watchdog_aiogram.py
src/xauusd100/: metrics.py
src/xauusd100/engine/: backtest_runner.py  live_runner.py  models.py  utils.py
src/xauusd100/io/: config.py
src/xauusd100/mt5/: broker_rules.py  connector.py  execution.py  state_sync.py  symbols.py
src/xauusd100/reporting/: export.py
src/xauusd100/risk/: guardrails.py  limits.py  sizing.py
src/xauusd100/risk_filters/: trend_quality.py
src/xauusd100/strategy/: base.py  indicators.py  pullback_trend.py
